examples/gke-gitops-deployment/gitops/deployments/flash-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flash5
  labels:
    name: flash5
